--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,6 @@ spring:
     port: 5672
     username: "guest"
     password: "guest"
-
 # this will enable encryption and decryption in cloud config server and provide implementation the api  /encrypt and /decrypt
 encrypt:
   key: "Password@123"
@@ -34,3 +33,12 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
+  endpoint:
+    health:
+      probes:
+        enabled: true
